argocd/manifests/prod/apps/funnaiest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: funnaiest
  namespace: funnaiest
  labels:
    app.kubernetes.io/name: funnaiest
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: funnaiest.com
    external-dns.alpha.kubernetes.io/target: d65bf19e-11ed-4df3-81c1-b76923b14de4.cfargotunnel.com
spec:
  selector:
    app: funnaiest
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 9090 # app listens here
